2019-10-20  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

2019-10-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Add Ion and Bill to Authors
	* README.md: Idem

2019-10-13  Jim Hester <james.f.hester@gmail.com>

	* src/digest.c: Add support for UTF-8 file paths on Windows
	* R/digest.R: Idem
	* inst/tinytest/test_encoding.R: Add tests for UTF-8 file paths.

2019-10-13  Bill Denney <wdenney@humanpredictions.com>

	* R/sha1.R: Add sha1.formula()
	* NAMESPACE: Idem
	* man/sha1.rd: Idem
	* inst/tinytest/test_sha1.R: Add tests for sha1.formula()

2019-10-12  Bill Denney <wdenney@humanpredictions.com>

	* R/sha1.R: Fix issue with num2hex() and input of Inf
	* inst/tinytest/test_sha1.R: Add Inf to the tests

2019-10-05  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* man/digest.Rd: Change three URL references to https
	* man/hmac.Rd: Ditto

	* R/utils.R: Move back functions used by digest() + makeVDigest()

	* R/AES.R: Added copyright header
	* R/digest.R: Idem
	* R/hmac.R: Idem
	* R/sha1.R: Idem
	* R/vdigest.R: Idem

2019-10-02  Ion Suruceanu  <ion.suruceanu@gapsquare.com>

	* R/AES.R: Add support for CFB cipher mode
	* man/AES.Rd: Add documentation
	* inst/tinytest/test_aes.R: Add tests
	
2019-09-20  Matthew de Queljoe <matthew.dequeljoe@gmail.com>

	* R/digest.R: refactor digest function
	* R/vdigest.R: remove helper functions from file
	* R/utils.R: new file to hold helper functions

2019-09-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.6.21

2019-09-18  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* DESCRIPTION (Author): Add Matthew
	* README.md (Author): Ditto

	* demo/vectorised.R: Add demo (based on Matthew's PR)

	* R/vdigest.R: Added a handful of #nocov tags
	* man/vdigest.Rd: Break up two long lines

2019-09-17  Matthew de Queljoe <matthew.dequeljoe@gmail.com>
